export cluster result

--- a/[Clustering] Submission Akhir BMLP_Nino Fachrurozy.ipynb
+++ b/[Clustering] Submission Akhir BMLP_Nino Fachrurozy.ipynb
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 226,
    "metadata": {
     "id": "fkbg_o80aRSH"
    },
@@ -3153,22 +3153,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Product</th>\n",
        "      <th>TypeName</th>\n",
-       "      <th>Inches</th>\n",
-       "      <th>Ram</th>\n",
-       "      <th>OS</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Price_euros</th>\n",
-       "      <th>Screen</th>\n",
-       "      <th>ScreenW</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Touchscreen</th>\n",
        "      <th>Process (nm)</th>\n",
-       "      <th>Cores (Shaders)</th>\n",
        "      <th>Base Clock (MHz)</th>\n",
        "      <th>Memory Size (GB)</th>\n",
-       "      <th>Memory Type</th>\n",
        "      <th>Memory Bus Width (bits)</th>\n",
        "      <th>TDP (W)</th>\n",
        "      <th>Integrated GPU</th>\n",
@@ -3179,22 +3168,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Apple</td>\n",
-       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.385542</td>\n",
-       "      <td>0.096774</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.169576</td>\n",
-       "      <td>0.194307</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.482619</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>48 Execution Units</td>\n",
        "      <td>0.518583</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3203,22 +3181,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Apple</td>\n",
-       "      <td>Macbook Air</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.385542</td>\n",
-       "      <td>0.096774</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.162095</td>\n",
-       "      <td>0.119693</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.029911</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>48 Execution Units</td>\n",
        "      <td>0.475367</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3227,22 +3194,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HP</td>\n",
-       "      <td>250 G6</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.662651</td>\n",
-       "      <td>0.096774</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.291771</td>\n",
-       "      <td>0.064854</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.223929</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24 Execution Units</td>\n",
        "      <td>0.518583</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3251,22 +3207,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Apple</td>\n",
-       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.638554</td>\n",
-       "      <td>0.225806</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.284289</td>\n",
-       "      <td>0.397073</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.611964</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>768 Stream Processors</td>\n",
        "      <td>0.350043</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>2</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.093702</td>\n",
        "      <td>0</td>\n",
@@ -3275,22 +3220,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Apple</td>\n",
-       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.385542</td>\n",
-       "      <td>0.096774</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.169576</td>\n",
-       "      <td>0.272841</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.482619</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>48 Execution Units</td>\n",
        "      <td>0.561798</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.072197</td>\n",
        "      <td>1</td>\n",
@@ -3299,52 +3233,33 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Company      Product  TypeName    Inches       Ram   OS    Weight  \\\n",
-       "0   Apple  MacBook Pro       0.4  0.385542  0.096774  1.0  0.169576   \n",
-       "1   Apple  Macbook Air       0.4  0.385542  0.096774  1.0  0.162095   \n",
-       "2      HP       250 G6       0.2  0.662651  0.096774  0.0  0.291771   \n",
-       "3   Apple  MacBook Pro       0.4  0.638554  0.225806  1.0  0.284289   \n",
-       "4   Apple  MacBook Pro       0.4  0.385542  0.096774  1.0  0.169576   \n",
+       "   TypeName  Touchscreen  Process (nm)  Base Clock (MHz)  Memory Size (GB)  \\\n",
+       "0       0.4            0           0.0          0.518583              0.00   \n",
+       "1       0.4            0           0.0          0.475367              0.00   \n",
+       "2       0.2            0           0.0          0.518583              0.00   \n",
+       "3       0.4            0           0.0          0.350043              0.25   \n",
+       "4       0.4            0           0.0          0.561798              0.00   \n",
        "\n",
-       "   Price_euros    Screen   ScreenW  ...  Process (nm)        Cores (Shaders)  \\\n",
-       "0     0.194307  0.000000  0.482619  ...           0.0     48 Execution Units   \n",
-       "1     0.119693  0.000000  0.029911  ...           0.0     48 Execution Units   \n",
-       "2     0.064854  0.333333  0.223929  ...           0.0     24 Execution Units   \n",
-       "3     0.397073  0.000000  0.611964  ...           0.0  768 Stream Processors   \n",
-       "4     0.272841  0.000000  0.482619  ...           0.0     48 Execution Units   \n",
-       "\n",
-       "   Base Clock (MHz)  Memory Size (GB) Memory Type  Memory Bus Width (bits)  \\\n",
-       "0          0.518583              0.00          No                     0.00   \n",
-       "1          0.475367              0.00          No                     0.00   \n",
-       "2          0.518583              0.00          No                     0.00   \n",
-       "3          0.350043              0.25           2                     0.25   \n",
-       "4          0.561798              0.00          No                     0.00   \n",
-       "\n",
-       "    TDP (W)  Integrated GPU  Mobile GPU  Cluster  \n",
-       "0  0.032258               1           1        2  \n",
-       "1  0.032258               1           1        2  \n",
-       "2  0.032258               1           1        2  \n",
-       "3  0.093702               0           1        1  \n",
-       "4  0.072197               1           1        2  \n",
-       "\n",
-       "[5 rows x 37 columns]"
+       "   Memory Bus Width (bits)   TDP (W)  Integrated GPU  Mobile GPU  Cluster  \n",
+       "0                     0.00  0.032258               1           1        2  \n",
+       "1                     0.00  0.032258               1           1        2  \n",
+       "2                     0.00  0.032258               1           1        2  \n",
+       "3                     0.25  0.093702               0           1        1  \n",
+       "4                     0.00  0.072197               1           1        2  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_laptop['Cluster'] = labels\n",
-    "df_scaled['Cluster'] = labels\n",
-    "\n",
-    "df_scaled.to_csv('laptop-clusters.csv')  \n",
-    "df_scaled.head()"
+    "df_select['Cluster'] = labels\n",
+    "df_select.to_csv('laptop-clusters.csv',index=False)  \n",
+    "df_select.head()"
    ]
   }
  ],
