--- a/[Clustering] Submission Akhir BMLP_Nino Fachrurozy.ipynb
+++ b/[Clustering] Submission Akhir BMLP_Nino Fachrurozy.ipynb
@@ -513,6 +513,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada dataset terdapat beberapa kolom yang tipe datanya tidak sesuai, seperti kolom Base Clock yang harusnya berupa numerik tetapi bertipe data object, selain itu masih terdapat beberapa data kosong"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -781,6 +788,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Beberapa kolom ini mempunyai tipe data yang belum sesuai sehingga akan dilakukan pengecekan agar dapat diseragamkan"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -802,6 +816,7 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman tipe data kolom 'Year' menjadi int\n",
     "df_laptop = df_laptop[~pd.to_numeric(df_laptop['Year'], errors='coerce').isnull()]\n",
     "df_laptop['Year'] = df_laptop['Year'].astype(str).astype(int)"
    ]
@@ -851,6 +866,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'Base Clock (MHz)' yang belum bertipe numerik\n",
     "df_laptop = df_laptop[~df_laptop['Base Clock (MHz)'].isnull()]\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['Base Clock (MHz)'], errors='coerce').isnull()]\n",
     "list(set(df_base['Base Clock (MHz)']))"
@@ -874,6 +890,10 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'Base Clock (MHz)' menjadi numerik\n",
+    "# Untuk data 'Unknown' dan 'Various' dihilangkan karena tidak jelas \n",
+    "# Untuk value yang mengandung 'Up to' hanya akan diambil angkanya saja \n",
+    "\n",
     "df_laptop = df_laptop.drop(df_laptop[df_laptop['Base Clock (MHz)'].str.contains('Various')].index)\n",
     "df_laptop = df_laptop.drop(df_laptop[df_laptop['Base Clock (MHz)'].str.contains('Unknown')].index)\n",
     "df_laptop['Base Clock (MHz)'] = df_laptop['Base Clock (MHz)'].apply(lambda x :x.replace('Up to ','') if 'Up to ' in x else x)\n",
@@ -913,6 +933,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'TDP (W)' yang belum bertipe numerik\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['TDP (W)'], errors='coerce').isnull()]\n",
     "list(set(df_base['TDP (W)']))"
    ]
@@ -935,6 +956,10 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'TDP (W)' menjadi numerik\n",
+    "# Untuk value yang mengandung '-' akan diambil angka tertinggi\n",
+    "# Untuk value yang mengandung '~' akan diambil angkanya saja\n",
+    "\n",
     "df_laptop['TDP (W)'] = df_laptop['TDP (W)'].apply(lambda x :x.split('-')[1] if '-' in x else x)\n",
     "df_laptop['TDP (W)'] = df_laptop['TDP (W)'].apply(lambda x :x.replace('~','') if '~' in x else x)\n",
     "df_laptop['TDP (W)'] = df_laptop['TDP (W)'].astype(str).astype(float)"
@@ -973,6 +998,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'Memory Bus Width (bits)' yang belum bertipe numerik\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['Memory Bus Width (bits)'], errors='coerce').isnull()]\n",
     "list(set(df_base['Memory Bus Width (bits)']))"
    ]
@@ -996,6 +1022,9 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'Memory Bus Width (bits)' menjadi numerik\n",
+    "# Untuk value yang mengandung '/' akan diambil angka tertinggi\n",
+    "# Untuk value yang mengandung 'x2' akan diambil angkanya dan dikalikan 2\n",
     "df_laptop['Memory Bus Width (bits)'] = df_laptop['Memory Bus Width (bits)'].fillna('0')\n",
     "df_laptop['Memory Bus Width (bits)'] = df_laptop['Memory Bus Width (bits)'].apply(lambda x :x.split('/')[1] if '/' in x else x)\n",
     "df_laptop['Memory Bus Width (bits)'] = df_laptop['Memory Bus Width (bits)'].apply(lambda x :int(x.replace('x2','')) * 2  if 'x2' in x else x)\n",
@@ -1035,6 +1064,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'Memory Size (GB)' yang belum bertipe numerik\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['Memory Size (GB)'], errors='coerce').isnull()]\n",
     "list(set(df_base['Memory Size (GB)']))"
    ]
@@ -1057,6 +1087,11 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'Memory Size (GB)' menjadi numerik\n",
+    "# Untuk value 'Shared' akan dijadikan 0\n",
+    "# Untuk value yang mengandung '/' akan diambil angka tertinggi\n",
+    "# Untuk value yang mengandung 'Up to' hanya akan diambil angkanya saja \n",
+    "# Untuk value yang mengandung 'x2' akan diambil angkanya dan dikalikan 2\n",
     "df_laptop['Memory Size (GB)'] = df_laptop['Memory Size (GB)'].apply(lambda x :'0' if x == 'Shared' else x)\n",
     "df_laptop['Memory Size (GB)'] = df_laptop['Memory Size (GB)'].apply(lambda x :x.split('/')[1] if '/' in x else x)\n",
     "df_laptop['Memory Size (GB)'] = df_laptop['Memory Size (GB)'].apply(lambda x :x.replace('Up to ','')  if 'Up to ' in x else x)\n",
@@ -1097,6 +1132,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'Memory Type' yang belum bertipe numerik\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['Memory Type'], errors='coerce').isnull()]\n",
     "list(set(df_base['Memory Type']))"
    ]
@@ -1119,6 +1155,9 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'Memory Type' menjadi numerik\n",
+    "# Untuk value kosong diisi 'No'\n",
+    "# Untuk value yang mengandung '/' akan diambil angka tertinggi\n",
     "df_laptop['Memory Type'] = df_laptop['Memory Type'].fillna('No')\n",
     "df_laptop['Memory Type'] = df_laptop['Memory Type'].apply(lambda x :x.split('/')[1] if '/' in x else x)"
    ]
@@ -1156,6 +1195,7 @@
     }
    ],
    "source": [
+    "# Cek value kolom 'Process (nm)' yang belum bertipe numerik\n",
     "df_base = df_laptop.loc[pd.to_numeric(df_laptop['Process (nm)'], errors='coerce').isnull()]\n",
     "list(set(df_base['Process (nm)']))"
    ]
@@ -1178,6 +1218,8 @@
    },
    "outputs": [],
    "source": [
+    "# Penyeragaman kolom 'Process (nm)' menjadi numerik\n",
+    "# Untuk value yang mengandung '/' akan diambil angka tertinggi\n",
     "df_laptop['Process (nm)'] = df_laptop['Process (nm)'].apply(lambda x :x.split('/')[1] if '/' in x else x)\n",
     "df_laptop['Process (nm)'] = df_laptop['Process (nm)'].astype(str).astype(int)"
    ]
@@ -1527,6 +1569,7 @@
    },
    "outputs": [],
    "source": [
+    "# Scaling data menggunakan min max\n",
     "numeric_features = df_scaled.select_dtypes(include=['number']).columns\n",
     "scaler = MinMaxScaler()\n",
     "df_scaled[numeric_features] = scaler.fit_transform(df_scaled[numeric_features])"
@@ -1594,6 +1637,7 @@
    },
    "outputs": [],
    "source": [
+    "# Encoding kolom Yes/No menjadi 1 dan 0\n",
     "bool_columns = ['Touchscreen', 'IPSpanel', 'RetinaDisplay', 'Integrated GPU', 'Mobile GPU']\n",
     "for col in bool_columns:\n",
     "  df_scaled[col] = df_scaled[col].map({'Yes': 1, 'No': 0})"
@@ -1923,6 +1967,7 @@
     }
    ],
    "source": [
+    "# Menghapus kolom 'QTY' karena semua valuenya sama, yaitu 1\n",
     "df_scaled = df_scaled.drop('QTY', axis=1)\n",
     "df_scaled.describe()"
    ]
@@ -2000,6 +2045,13 @@
    ],
    "source": [
     "df_scaled.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setelah dilakukan preprocessing, data dalam kolom sudah seragam dan simpangan di semua kolom mendekati 1"
    ]
   },
   {
@@ -2430,6 +2482,8 @@
     }
    ],
    "source": [
+    "# Membuat dataframe baru untuk proses feature selection\n",
+    "# Target adalah hasil clustering dari model yang masih belum optimal\n",
     "df_pre = df_scaled.copy()\n",
     "df_pre['Cluster'] = labels\n",
     "df_pre.head()"
@@ -2474,6 +2528,8 @@
     }
    ],
    "source": [
+    "# Proses embedded method untuk ekstraksi fitur yang penting\n",
+    "# Menggunakan random forest classifier\n",
     "X = df_pre.select_dtypes(include=['number']).drop(['Cluster'], axis=1).values\n",
     "y = df_pre['Cluster'].values\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -2492,9 +2548,7 @@
     "for i in important_features_indices:\n",
     "  col = df_pre.select_dtypes(include=['number']).columns[i]\n",
     "  features.append(col)\n",
-    "  print(f\"{col}: {importances[i]}\")\n",
-    "\n",
-    "# features.extend(['Ram', 'CPU_freq'])"
+    "  print(f\"{col}: {importances[i]}\")"
    ]
   },
   {
@@ -2638,6 +2692,7 @@
     }
    ],
    "source": [
+    "# Membuat dataframe hanya dengan fitur yang penting\n",
     "df_select = df_scaled[features]\n",
     "df_select = df_select.select_dtypes(include=['number'])\n",
     "df_select.head()"
@@ -2825,6 +2880,7 @@
    },
    "outputs": [],
    "source": [
+    "# Mengumpulkan list id baris dari setiap cluster\n",
     "cluster_ids = []\n",
     "for cluster_id in range(k):\n",
     "  ids = [i for i in range(len(df_laptop)) if labels[i] == cluster_id]\n",
@@ -3127,7 +3183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 227,
    "metadata": {
     "id": "fkbg_o80aRSH"
    },
@@ -3153,11 +3209,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
        "      <th>TypeName</th>\n",
-       "      <th>Touchscreen</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "      <th>Screen</th>\n",
+       "      <th>ScreenW</th>\n",
+       "      <th>...</th>\n",
        "      <th>Process (nm)</th>\n",
+       "      <th>Cores (Shaders)</th>\n",
        "      <th>Base Clock (MHz)</th>\n",
        "      <th>Memory Size (GB)</th>\n",
+       "      <th>Memory Type</th>\n",
        "      <th>Memory Bus Width (bits)</th>\n",
        "      <th>TDP (W)</th>\n",
        "      <th>Integrated GPU</th>\n",
@@ -3168,11 +3235,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.385542</td>\n",
+       "      <td>0.096774</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.169576</td>\n",
+       "      <td>0.194307</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.482619</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>48 Execution Units</td>\n",
        "      <td>0.518583</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3181,11 +3259,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Macbook Air</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.385542</td>\n",
+       "      <td>0.096774</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.162095</td>\n",
+       "      <td>0.119693</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.029911</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>48 Execution Units</td>\n",
        "      <td>0.475367</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3194,11 +3283,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.662651</td>\n",
+       "      <td>0.096774</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.291771</td>\n",
+       "      <td>0.064854</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.223929</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24 Execution Units</td>\n",
        "      <td>0.518583</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.032258</td>\n",
        "      <td>1</td>\n",
@@ -3207,11 +3307,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.638554</td>\n",
+       "      <td>0.225806</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.284289</td>\n",
+       "      <td>0.397073</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.611964</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>768 Stream Processors</td>\n",
        "      <td>0.350043</td>\n",
        "      <td>0.25</td>\n",
+       "      <td>2</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.093702</td>\n",
        "      <td>0</td>\n",
@@ -3220,11 +3331,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.385542</td>\n",
+       "      <td>0.096774</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.169576</td>\n",
+       "      <td>0.272841</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.482619</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>48 Execution Units</td>\n",
        "      <td>0.561798</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>No</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.072197</td>\n",
        "      <td>1</td>\n",
@@ -3233,33 +3355,50 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   TypeName  Touchscreen  Process (nm)  Base Clock (MHz)  Memory Size (GB)  \\\n",
-       "0       0.4            0           0.0          0.518583              0.00   \n",
-       "1       0.4            0           0.0          0.475367              0.00   \n",
-       "2       0.2            0           0.0          0.518583              0.00   \n",
-       "3       0.4            0           0.0          0.350043              0.25   \n",
-       "4       0.4            0           0.0          0.561798              0.00   \n",
+       "  Company      Product  TypeName    Inches       Ram   OS    Weight  \\\n",
+       "0   Apple  MacBook Pro       0.4  0.385542  0.096774  1.0  0.169576   \n",
+       "1   Apple  Macbook Air       0.4  0.385542  0.096774  1.0  0.162095   \n",
+       "2      HP       250 G6       0.2  0.662651  0.096774  0.0  0.291771   \n",
+       "3   Apple  MacBook Pro       0.4  0.638554  0.225806  1.0  0.284289   \n",
+       "4   Apple  MacBook Pro       0.4  0.385542  0.096774  1.0  0.169576   \n",
        "\n",
-       "   Memory Bus Width (bits)   TDP (W)  Integrated GPU  Mobile GPU  Cluster  \n",
-       "0                     0.00  0.032258               1           1        2  \n",
-       "1                     0.00  0.032258               1           1        2  \n",
-       "2                     0.00  0.032258               1           1        2  \n",
-       "3                     0.25  0.093702               0           1        1  \n",
-       "4                     0.00  0.072197               1           1        2  "
+       "   Price_euros    Screen   ScreenW  ...  Process (nm)        Cores (Shaders)  \\\n",
+       "0     0.194307  0.000000  0.482619  ...           0.0     48 Execution Units   \n",
+       "1     0.119693  0.000000  0.029911  ...           0.0     48 Execution Units   \n",
+       "2     0.064854  0.333333  0.223929  ...           0.0     24 Execution Units   \n",
+       "3     0.397073  0.000000  0.611964  ...           0.0  768 Stream Processors   \n",
+       "4     0.272841  0.000000  0.482619  ...           0.0     48 Execution Units   \n",
+       "\n",
+       "   Base Clock (MHz)  Memory Size (GB) Memory Type  Memory Bus Width (bits)  \\\n",
+       "0          0.518583              0.00          No                     0.00   \n",
+       "1          0.475367              0.00          No                     0.00   \n",
+       "2          0.518583              0.00          No                     0.00   \n",
+       "3          0.350043              0.25           2                     0.25   \n",
+       "4          0.561798              0.00          No                     0.00   \n",
+       "\n",
+       "    TDP (W)  Integrated GPU  Mobile GPU  Cluster  \n",
+       "0  0.032258               1           1        2  \n",
+       "1  0.032258               1           1        2  \n",
+       "2  0.032258               1           1        2  \n",
+       "3  0.093702               0           1        1  \n",
+       "4  0.072197               1           1        2  \n",
+       "\n",
+       "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_select['Cluster'] = labels\n",
-    "df_select.to_csv('laptop-clusters.csv',index=False)  \n",
-    "df_select.head()"
+    "df_scaled['Cluster'] = labels\n",
+    "df_scaled.to_csv('laptop-clusters.csv', index=False)  \n",
+    "df_scaled.head()"
    ]
   }
  ],
